force-app/main/default/objects/Asset_Warranty__c/Asset_Warranty__c.object-meta.xml
<CustomObject>
    <description>Represents the warranty coverage attached to a specific customer asset.</description>
    <label>Asset Warranty</label>
    <nameField>
        <displayFormat>AW-{000000}</displayFormat>
        <label>Asset Warranty Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Warranties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>