force-app/main/default/objects/Asset_Warranty__c/fields/Receipt_Verified__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Verified</label>
    <type>Checkbox</type>
</CustomField>