force-app/main/default/objects/Asset_Warranty__c/fields/Warranty_Plan__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty Plan</label>
    <referenceTo>Warranty_Plan__c</referenceTo>
    <relationshipLabel>Asset Warranties</relationshipLabel>
    <relationshipName>Asset_Warranties</relationshipName>
    <type>Lookup</type>
</CustomField>